Update table styling to fix overlap issue on mobile

--- a/app/assets/stylesheets/components/_job_board_table.scss
+++ b/app/assets/stylesheets/components/_job_board_table.scss
@@ -39,7 +39,7 @@
   }
 
   .job-id-header {
-    width: 10%;
+    width: 15%;
   }
 
   .job-url-cell {
